firefox fix on {Register Form}- set overflow:overlay to overflow:auto

--- a/Portfolio/external/register_page/assets/css/register.css
+++ b/Portfolio/external/register_page/assets/css/register.css
@@ -26,7 +26,7 @@
 		margin-top: 10vh;
 		padding-top: 3.8vh;
 		padding-bottom: 8vh;
-		overflow: overlay; 
+		overflow: auto; 
 	}
 	.grid{
 		position: absolute;
@@ -756,7 +756,6 @@ and (max-width: 552px){
     	left: 0px;
 	}
 }
-
 
 
 
